added ssl configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 auth.fb.url=https://graph.facebook.com/v3.0/
 auth.fb.key=182540885922510
 auth.fb.secret=40d379091827b9591b04b914e0557e1f
-auth.callback=http://localhost:8080/auth/login/
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
+auth.callback=https://localhost:8080/auth/login/
